styles/style.css
/* ... */
.blog-content .container .gen-btn:hover {
  background: rgba(255, 255, 255, 0.85);
  -webkit-transition: .4s;
  transition: .4s;
}

.blog-content .container .gen-btn:hover a {
  text-decoration: none;
  color: #0ec6aa;
}

.blog-content .container h3 {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

/*-- Portfolio Post Page (Currently only 1 post, 2 placeholder posts) --*/
.portfolio-overview {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  min-height: 100vh;
  width: 100%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  padding: 30px 0 2em;
  /* Placeholder Images */
}

.portfolio-overview img {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  max-width: 100%;
  max-height: 350px;
  border-radius: 5px;
  border: 2px solid rgba(0, 0, 0, 0.5);
  opacity: 90%;
}

.portfolio-overview .image-wrapper a:hover img {
  border: 2px solid #08fdd8;
  opacity: 100%;
  -webkit-transition: .2s;
  transition: .2s;
}

.portfolio-overview .content-wrapper {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.portfolio-overview .container {
  padding: 1em 0 1em;
  border-top: 0.5px solid #646464;
}

.portfolio-overview .container .image-wrapper {
  padding: 8px 0;
}

#portfolio-intro {
  margin-top: 30px;
}

.container .content-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  max-width: 700px;
  width: 100%;
}

.resume-section {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  min-height: 100vh;
  width: 100%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  padding: 0 0 2em;
}

.resume-section .container {
  width: 100%;
}

.resume-section .container .content-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.resume-section .container .content-wrapper h2 {
  margin-bottom: 10px;
  max-width: 100%;
}

.resume-section .container .content-wrapper h2 mark {
  max-width: 100%;
}

.resume-section .mobile-resume-block {
  width: 100%;
  height: auto;
}

.resume-section .mobile-resume-block object {
  width: 100%;
  height: 500px;
}

.resume-section .laptop-desktop-resume {
  width: 100%;
  height: auto;
}

.resume-section .laptop-desktop-resume a {
  text-decoration: none;
}

.resume-section .laptop-desktop-resume button {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 180px;
  max-width: 100%;
  height: 50px;
  margin: 10px 0 0px;
  border-radius: 5px;
  background: #0ec6aa;
  color: white;
  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
          box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
  margin: 0 auto;
}

.resume-section .laptop-desktop-resume button:hover {
  background: rgba(255, 255, 255, 0.85);
  color: #0ec6aa;
  -webkit-transition: .4s;
  transition: .4s;
}

/* Break Points for Other Screen Sizes */
/***-- Tablet and Beyond --***/
@media only screen and (max-width: 481px) {
  object {
    display: none;
  }
}

@media only screen and (min-width: 481px) {
  .laptop-desktop-resume {
    display: none;
  }
}

/*-- Contact Page --*/
.contact-section {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  min-height: 100vh;
  /*Change this to 600px once bug squashed*/
  width: 100%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  padding: 0 0 2em;
}

.contact-section .contact-form {
  background: #ffffff10;
  border-radius: 2px;
  -webkit-backdrop-filter: blur(12px);
          backdrop-filter: blur(12px);
  padding: 10px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: 100%;
  max-width: 700px;
  padding: 10px;
}

.contact-form {
  display: block;
  max-width: 700px;
  /* Formatting for the individual fields */
}

.contact-form h2 {
  margin-bottom: 10px;
}

.contact-form form {
  width: 100%;
}
/* ... */

